# deaths-door

./: .gitignore  Attributions.md  CLAUDE.md  Makefile  README.md  TODO.md  botc_rules.md
.github/workflows/: ci.yml
backend/: Cargo.toml  Makefile  pyproject.toml
backend-rust/: .gitignore  README.md
backend-rust/src/: alignment.rs  apns.rs  app.rs  character.rs  config.rs  game_manager.rs  game_state.rs  player.rs  sound.rs  status_effect.rs  timer_state.rs
backend-rust/src/routes/: game.rs  lights.rs  scripts.rs
backend-rust/static/app/: index.html
backend-rust/static/app/assets/: index-Dap1OYeD.js
backend-rust/tests/: api.rs
backend/assets/: lighting_positions.json
backend/data/: botc_data.json
backend/src/: apns.rs  app.rs  apply.rs  character_type.rs  config.rs  effects.rs  error.rs  event_store.rs  events.rs  game_manager.rs  game_state.rs  lib.rs  lighting.rs  lock.rs  main.rs  night_step.rs  script.rs  script_name.rs  scripts.rs  sound.rs  status_effect.rs  timer_state.rs  vote.rs
backend/src/assets/scripts/: trouble_brewing.json
backend/src/deaths_door/: alignment.py  apns_manager.py  apply.py  changes.py  character.py  character_type.py  config.py  event_store.py  events.py  game.py  game_manager.py  game_state.py  lighting.py  main.py  night_step.py  obs_manager.py  player.py  script.py  script_name.py  sound_fx.py  status_effects.py  timer_state.py
backend/src/deaths_door/characters/trouble_brewing/: __init__.py  baron.py  butler.py  chef.py  drunk.py  empath.py  fortune_teller.py  imp.py  investigator.py  librarian.py  mayor.py  monk.py  poisoner.py  ravenkeeper.py  recluse.py  saint.py  scarlet_woman.py  slayer.py  soldier.py  spy.py  undertaker.py  virgin.py  washerwoman.py
backend/src/deaths_door/obs/: types.py
backend/src/deaths_door/routes/: characters.py  game.py  lights.py  players.py  scripts.py  sounds.py  timer.py
backend/src/deaths_door/scripts/: registry.py  trouble_brewing.py
backend/src/deaths_door/tests/: helpers.py  test_api_game.py  test_api_players.py  test_apply.py  test_character.py  test_edge_cases.py  test_event_store.py  test_game.py  test_main.py  test_player.py  test_sounds.py  test_status_effect_removal.py
backend/src/deaths_door/travelers/bad_moon_rising/: bishop.py  bureaucrat.py  judge.py  matron.py  voudon.py
backend/src/deaths_door/travelers/sects_and_violets/: barista.py  bone_collector.py  butcher.py  deviant.py  harlot.py
backend/src/deaths_door/travelers/trouble_brewing/: __init__.py  beggar.py  bureaucrat.py  gunslinger.py  scapegoat.py  thief.py
backend/src/routes/: characters.rs  day.rs  game.rs  lights.rs  mod.rs  players.rs  sounds.rs  timer.rs
backend/static/: debug.html  role.html
backend/static/app/assets/: index-mXy1-auJ.css
backend/tests/: api.rs  effects.rs  event_sourcing.rs  game_manager.rs  lighting.rs
backend/tests/common/: mod.rs
backend/typings/obswebsocket/: __init__.pyi  base_classes.pyi  core.pyi  exceptions.pyi
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/effects/: EffectOverlay.tsx
frontend/src/components/players/: ChoppingBlockDisplay.tsx  PlayerList.tsx  VoteTallyDisplay.tsx
frontend/src/components/timer/: TimerDisplay.tsx
frontend/src/hooks/: useGameState.ts  useTimer.ts
frontend/src/pages/: OverlayPage.tsx  RevealPage.tsx
