[package]
name = "deaths-door"
version = "0.1.0"
edition = "2021"
description = "A tool to facilitate our games of Blood on the Clocktower. (Rust port)"
authors = ["Ryan Slama <ryanmslama@gmail.com>"]

[[bin]]
name = "deaths-door"
path = "src/main.rs"

[lib]
name = "deaths_door"
path = "src/lib.rs"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "fs", "catch-panic", "trace"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-core = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Persistence
rusqlite = { version = "0.32", features = ["bundled"] }

# Common
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
once_cell = "1"
glob = "0.3"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OpenAPI spec generation
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-axum = "0.2"

# APNS (Apple Push) — HTTP/2 + ES256 JWT
reqwest = { version = "0.12", default-features = false, features = ["json", "http2", "rustls-tls"] }
jsonwebtoken = "9"

# Hardware
serialport = "4"
rodio = "0.19"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
mime = "0.3"
