[tool.poetry]
name = "deaths-door"
version = "0.1.0"
description = "A tool to facilitate our games of Blood on the Clocktower."
authors = ["Ryan Slama <ryanmslama@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pyright = "^1.1.402"
fastapi = "^0.115.12"
uvicorn = { extras = ["standard"], version = "^0.34.3" }
httpx = "^0.28.1"
pygame = "^2.5.2"
obs-websocket-py = "^1.0"
pyserial = "^3.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"
pytest = "^8.4.0"
coverage = { extras = ["toml"], version = "^7.9.0" }
pytest-cov = "^6.2.0"
trio = "^0.30.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["deaths_door"]

[tool.coverage.report]
show_missing = true

[tool.ruff.lint]
select = [
    # Pycodestyle
    "E",
    "W",
    # flake-bugbear
    "B",
    "B9",
    "D",  # Docstrings
    "F",  # Pyflakes
    "I",  # isort
    "S",  # flake-bandit security rules
    "N",  # PEP 8 naming
]
ignore = [
    # Missing docstring in public module
    "D100",
    # Missing docstring in public package
    "D104",
    # no-blank-line-before-class (incompatible with D203)
    "D203",
    # multi-line-summary-first-line (incompatible with multi-line-summary-second-line)
    "D212",
    # Allow asserts
    "S101",
]

[tool.ruff.lint.per-file-ignores]
"typings/*" = ["D", "E501"]
# Allow camelCase because OBS API objects use it
"src/deaths_door/obs/types.py" = ["N815"]

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__"]
typeCheckingMode = "strict"

# Prevent lint errors when using FastAPI Depends as a default argument
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.params.Depends",
    "fastapi.Query",
    "fastapi.params.Query",
]
